# IndicTransTokenizer

./: pyproject.toml
